We can close issue #5 because we now know that this happens because of the z-index that the grid needs to render messes up with the window's event listener

--- a/client/exclude_list_page/exclude_list.css
+++ b/client/exclude_list_page/exclude_list.css
@@ -77,6 +77,7 @@ hr {
 }
 
 .picture-column {
+  z-index: 0;
   flex: 25%;
   max-width: 25%;
   padding: 0 4px;
